kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: igwn-peviewer
spec:
  minReadySeconds: 10
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: igwn-peviewer
  template:
    metadata:
      labels:
        app: igwn-peviewer
    spec:
      containers:
      - name: igwn-peviewer
        image: ghcr.io/jkanner/pe-viewer:1783550169
        imagePullPolicy: IfNotPresent
        ports:
        - name: streamlit
          containerPort: 8501
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 10G
          requests:
            cpu: 100m
            memory: 1G
