kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pe-viewer
  namespace: igwn-pe-viewer
spec:
  type: ClusterIP
  selector:
    app: pe-viewer
  ports:
    - name: http
      port: 8501
      protocol: TCP
      targetPort: http
