kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peviewer
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "peviewer.igwn.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: peviewer
            port:
              number: 80
  - host: "peviewer.ldas.cit"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: peviewer
            port:
              number: 80
